ssu_score/STD_DIR/20190018/11.error
STD_DIR/20190018/11.c:7:2: warning: implicitly declaring library function 'printf' with type 'int (const char *, ...)' [-Wimplicit-function-declaration]
        printf("SIGUSR1 catched!!\n");
        ^
STD_DIR/20190018/11.c:7:2: note: include the header <stdio.h> or explicitly provide a declaration for 'printf'
STD_DIR/20190018/11.c:25:3: warning: implicit declaration of function 'fprintf' is invalid in C99 [-Wimplicit-function-declaration]
                fprintf(stderr, "fork error\n");
                ^
STD_DIR/20190018/11.c:25:3: warning: declaration of built-in function 'fprintf' requires inclusion of the header <stdio.h> [-Wbuiltin-requires-header]
STD_DIR/20190018/11.c:25:11: error: use of undeclared identifier 'stderr'
                fprintf(stderr, "fork error\n");
                        ^
3 warnings and 1 error generated.
sh: 3: command not found
sh: line 1: IR/20190018/11.stdexe: No such file or directory
